[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/gui/MappingItem.gd" type="Script" id=1]

[node name="MappingItem" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 24.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_enable" type="CheckBox" parent="."]
margin_right = 24.0
margin_bottom = 24.0
pressed = true

[node name="SpinBox_index" type="SpinBox" parent="."]
margin_left = 28.0
margin_right = 102.0
margin_bottom = 24.0

[node name="LineEdit_name" type="LineEdit" parent="."]
margin_left = 106.0
margin_right = 1577.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Button_remove" type="Button" parent="."]
margin_left = 1581.0
margin_right = 1600.0
margin_bottom = 24.0
text = "x"
[connection signal="toggled" from="CheckBox_enable" to="." method="_on_CheckBox_enable_toggled"]
